tests/10.out
spim: (parser) syntax error on line 29 of file worm.s
	  .globl	delay 4
	               ^
Instruction references undefined symbol at 0x00400014
  [0x00400014]	0x0c000000  jal 0x00000000 [main]           ; 188: jal main
The following symbols are undefined:
initWorm
wormRow
randSeed
overlaps
grid
addWormToGrid
giveUp
delay
clearGrid
drawGrid
main
wormCol
moveWorm
onGrid
intValue

